# NearNext

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: filter_rules.json
docs/: app.js  events.json  index.html  style.css
event_workflow/: __init__.py  cli.py  dates.py  filters.py  interest_filter.py  models.py  pipeline.py  scheduler.py  site.py  stats.py  storage.py
event_workflow/llm/: agnes_client.py  analyzer.py
event_workflow/sources/: __init__.py  base.py  concordia.py  mcgill.py
scripts/: inspect_concordia.py  inspect_html.py
tests/: test_filters.py  test_interest_filter.py  test_llm.py  test_pipeline.py  test_scrapers.py  test_site.py  test_storage.py
tests/fixtures/: concordia_sample.html  mcgill_sample.html
