[project]
name = "event-workflow"
version = "0.1.0"
description = "Campus event scanner with JSON export and Agnes LLM analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "responses>=0.25.0",
    "freezegun>=1.4.0",
]

[project.scripts]
event-workflow = "event_workflow.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["event_workflow*"]

[tool.setuptools.package-data]
event_workflow = ["site_assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
